...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/card_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Add Routine" />

        <Button
            android:id="@+id/rename_routine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Routine" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
